# solar-rover

./: CMakeLists.txt  LICENSE  README.md  compile.sh  install.sh  run.sh
art/: a.txt  down_arrow.txt  drive_bar.txt  e.txt  l.txt  left_arrow.txt  mainscreen.txt  o.txt  r.txt  right_arrow.txt  s.txt  t.txt  test.txt  title.txt  up_arrow.txt  v.txt
lib/: CMakeLists.txt
src/: app.c  app.h  brushed_motor.c  brushed_motor.h  button.c  button.h  drive.c  drive.h  interface.c  interface.h  ldr.c  ldr.h  main.c  motor.c  motor.h  mycutils.c  mycutils.h  rack.c  rack.h  rover.c  rover.h  rover_exec.c  rover_sp.c  rpiutils.c  rpiutils.h  servo.c  servo.h  stepper.c  stepper.h  stepper_motor.c  stepper_motor.h  subproc.c  term.c  term.h
