add_library (mycutils ../../src/mycutils.h ../../src/mycutils.c)
add_library (rpiutils ../../src/rpiutils.h ../../src/rpiutils.c)
add_library (stepper ../../src/stepper.h ../../src/stepper.c)
add_library (motor ../../src/motor.h ../../src/motor.c)
add_library (rover ../../src/rover.h ../../src/rover.c)
add_library (app ../../src/app.h ../../src/app.c)

target_link_libraries(rpiutils LINK_PUBLIC pi-gpio mycutils)
target_link_libraries(stepper LINK_PUBLIC pi-gpio mycutils)
target_link_libraries(motor LINK_PUBLIC pi-gpio)
target_link_libraries(rover LINK_PUBLIC motor stepper)
target_link_libraries(app LINK_PUBLIC pi-gpio rpiutils mycutils rover)

target_include_directories (mycutils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories (rpiutils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories (stepper PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories (motor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories (rover PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories (app PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
